Fix spacing.

--- a/Sources/UI/Styles/Custom.scss
+++ b/Sources/UI/Styles/Custom.scss
@@ -400,7 +400,7 @@ hr {
     background-color: $red;
 }
 
-.page visual {
+.page visual, #card visual {
     display: none;
     padding-left: 6px;
     padding-right: 6px;
